--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,2 @@
-
- <nb-layout>
-  <nb-layout-header></nb-layout-header>
-  <nb-layout-footer></nb-layout-footer>
-  <nb-layout-column>
-    <app-event-category></app-event-category>
-  </nb-layout-column>
-
- </nb-layout>
+<app-event-category></app-event-category>
+<router-outlet></router-outlet>
