--- a/src/app/components/event-category/event-category.component.css
+++ b/src/app/components/event-category/event-category.component.css
@@ -1,105 +1,62 @@
-/* table {
-
-  border: 0.5px solid black;
-  border-collapse: collapse;
-  padding: 8px 15px;
-  font-family: Arial, Helvetica, sans-serif;
-  width: 100%;
-
-}
-th {
-  font-size: 20px;
-  border: 0.5px solid black ;
-
-}
-
-td {
-  border: 0.5px solid black;
-  border-collapse: collapse;
-} */
-
-.header-title{
+.header-title {
   font-weight: 800;
   font-size: 20px;
   font-family: "Lato", sans-serif;
   text-transform: uppercase;
   margin-bottom: 20px;
   color: #fff;
-
 }
-.header-col-title{
-  text-align: center
+.header-col-title {
+  text-align: center;
 }
-.act-openCard{
-  float: right;
-  /* :hover{
-    cursor: pointer; */
-  }
 .btn-new{
   float: right;
 }
-.act-openCard:hover{
-
-
-    cursor: pointer;
-
+.act-openCard {
+  float: right;
 }
-.btn-clear{
-  margin-right:10px ;
+.act-openCard:hover {
+  cursor: pointer;
 }
-.btn-act{
+.btn-clear {
+  margin-right: 10px;
+}
+.btn-act {
   float: right;
   margin-top: 20px;
 }
 
-.head {
-  padding: 0px 0px;
-}
-
-.countPosts{
+.countPosts {
   color: brown;
   background-color: red;
 }
 
 #customers {
-  font-family: "Lato", sans-serif;;
+  font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
 }
 
-
-#customers td, #customers th {
+#customers td,
+#customers th {
   border: 1px solid #ddd;
   padding: 8px 10px;
 }
 
-/* #customers tr:nth-child(even){background-color: #f2f2f2;} */
-
-#customers tr {
-  font-size: 20px;
-
+#customers tr:hover {
+  background-color: #ddd;
 }
 
-#customers tr:hover {background-color: #ddd;}
-
-
 #customers th {
-/*     padding-top: 12px;
-  padding-bottom: 12px; /
-  text-align: center;
-  / background-color: #04AA6D; */
-  background-color: #FFF;
+  background-color: #fff;
   color: black;
 }
 
-.search-input{
-/* width: 100%; */
-font-size: 20px;
-/* background-color: #fff;
- */}
-.hidden {
-  text-align: center;
+.search-input {
+  width: 100%;
 }
 
+.act-icon-edit{
 
-
+  margin:0 10px ;
+}
